  * keep the format consistent (79 char width, M/D/Y date format) and do not
    use tabs but use spaces for formatting
  * accompany each entry with github issue/PR number (Issue #xyz)
  * release numbers follow "Semantic Versioning" http://semver.org

------------------------------------------------------------------------------
??/??/?? IAlibay

 * 2.5.0

Fixes

Enhancements

Changes

Deprecations


12/21/22 IAlibay

 * 2.4.2

Fixes
  * np.histogramdd calls in :class:`DensityAnalysis` now pass the `density`
    argument rather than the NumPy 1.24 removed `normed` (PR #3976)


12/17/22 IAlibay

 * 2.4.1

Fixes
* Fixes pyproject.toml minimum pin for biopython


12/16/22 IAlibay, Luthaf, hmacdope, rafaelpap, jbarnoud, BFedder, aya9aladdin,
         jaclark5, jfennick, lilyminium, orbeckst, Hakarishirenai

 * 2.4.0

Fixes
  * Update hbond analysis doc string to use exclusive bound language 
    (Issue #3847)
  * XTC and TRR readers now fail with IOError when a status except EOK (=0) is
    detected on reading a frame instead of silently continuing
  * Consolidate license files across MDAnalysis library packages (PR #3939)
  * Kwargs passed through to `MemoryReader` when using `transfer_to_memory()`
    and `in_memory=True`.
  * NoDataError raised on empty atomgroup provided to `DCDReader.timeseries` 
    was changed to ValueError (see #3901). A matching ValueError was added to
    `MemoryReader.timeseries`(PR #3890). 
  * Removes ``pbc`` kwarg from ``AtomGroup.wrap`` (Issue #3909)
  * LAMMPSDump Reader translates the box to the origin (#3741)
  * hbond analysis: access hbonds results through new results member in count_by_ids() and count_by_type()
  * Auxiliary; determination of representative frames: Removed undefined
    behaviour for cutoff values < -1 (PR # 3749)
  * Fixes distances.between not always returning AtomGroup (Issue #3794)
  * Upgrade to chemfiles 0.10.3 (Issue #3798)
  * fixes guessed_attributes and read_attributes methods of the Topology class, as 