@@ -22,6 +22,10 @@ Fixes
 Enhancements
 
 Changes
+  * The deprecated direct indexing and `times` from the `results` attribute of
+    analysis.nucleicacids' NucPairDist and WatsonCrickDist classes has been
+    removed. Please use the `results.pair_distances` and `times` attributes
+    instead (Issue #3744)
 
 Deprecations
 
